k8s_simple_project/common-cluster1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-cluster1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: common-cluster1
  template:
    metadata:
      labels:
        app: common-cluster1
    spec:
      containers:
      - name: common-cluster1
        image: common:1.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps
          name: common-storage
        ports:
        - containerPort: 8080
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: common-storage
        persistentVolumeClaim:
          claimName: pvc-common1
---
apiVersion: v1
kind: Service
metadata:
  name: common-service1
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: common-cluster1
