k8s_simple_project/consul-cluster1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-cluster1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul-cluster1
  template:
    metadata:
      labels:
        app: consul-cluster1
    spec:
      containers:
      - name: consul-cluster1
        image: consul:1.11.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /consul/config
          name: consul-storage
        ports:
        - containerPort: 8080
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: consul-storage
        persistentVolumeClaim:
          claimName: pvc-consul1
---
apiVersion: v1
kind: Service
metadata:
  name: consul-service1
spec:
  type: ClusterIP
  clusterIP: 10.233.0.100
  ports:
    - port: 8500
  selector:
    app: consul-cluster1
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: consul-nodeport
spec:
  type: NodePort
  selector:
    app: consul-cluster1
  ports:
    - port: 8500
      targetPort: 8500
      nodePort: 30000
      protocol: TCP
