k8s_simple_project/consul-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: consul-gateway
  template:
    metadata:
      labels:
        app: consul-gateway
    spec:
      containers:
      - name: consul-gateway
        image: gateway:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: consul-gateway
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: consul-gateway
