k8s_simple_project/tomcat-cluster1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-cluster1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat-cluster1
  template:
    metadata:
      labels:
        app: tomcat-cluster1
    spec:
      containers:
      - name: tomcat-cluster1
        image: lengcz/tomcat:1.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /usr/local/apache-tomcat-9.0.60/webapps
          name: tomcat-storage
        ports:
        - containerPort: 8080
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: tomcat-storage
        persistentVolumeClaim:
          claimName: pvc-tomcat1
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service1
spec:
  type: ClusterIP
  clusterIP: 10.233.0.101
  ports:
    - port: 8080
  selector:
    app: tomcat-cluster1
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: tomcat-nodeport
spec:
  type: NodePort
  selector:
    app: tomcat-cluster1
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
      protocol: TCP
