k8s_simple_project/word-cluster1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-cluster1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: word-cluster1
  template:
    metadata:
      labels:
        app: word-cluster1
    spec:
      containers:
      - name: word-cluster1
        image: word:1.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps
          name: word-storage
        ports:
        - containerPort: 8080
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: word-storage
        persistentVolumeClaim:
          claimName: pvc-word1
---
apiVersion: v1
kind: Service
metadata:
  name: word-service1
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: word-cluster1
